--- a/getInLine/src/main/resources/application.properties
+++ b/getInLine/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.application.name=getInLine
 debug=true
 management.endpoints.web.exposure.include=*
-#
-spring.mvc.view.suffix=.html
+server.error.whitelabel.enabled=false
