--- a/getInLine/src/main/resources/application.properties
+++ b/getInLine/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=getInLine
 debug=true
 management.endpoints.web.exposure.include=*
-server.error.whitelabel.enabled=false
+server.error.whitelabel.enabled=true
