--- a/getInLine/src/main/resources/application.properties
+++ b/getInLine/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=getInLine
-debug=true
+debug=false
 management.endpoints.web.exposure.include=*
 server.error.whitelabel.enabled=false
+
+logging.level.com.example.getinline=debug
