spring boot properties
banner, debug등 다양한 프로퍼티에 대해서 작업 !

--- a/getInLine/src/main/resources/application.properties
+++ b/getInLine/src/main/resources/application.properties
@@ -4,3 +4,6 @@ management.endpoints.web.exposure.include=*
 server.error.whitelabel.enabled=false
 
 logging.level.com.example.getinline=debug
+
+#api ?? ??? ??? ???? ??? ??
+logging.level.org.springframework.web.servlet=debug
