--- a/getInLine/src/main/resources/application.properties
+++ b/getInLine/src/main/resources/application.properties
@@ -7,3 +7,6 @@ logging.level.com.example.getinline=debug
 
 #api ?? ??? ??? ???? ??? ??
 logging.level.org.springframework.web.servlet=debug
+
+# ???? ?? ??? ???? ???? ??? ????
+spring.thymeleaf.cache=false
