타임리프 사용법, decoupled Logic 사용
html5모양 그대로 쓰기위해 decoupled Logic 사용

--- a/getInLine/src/main/resources/application.properties
+++ b/getInLine/src/main/resources/application.properties
@@ -5,8 +5,12 @@ server.error.whitelabel.enabled=false
 
 logging.level.com.example.getinline=debug
 
+
+
 #api ?? ??? ??? ???? ??? ??
 logging.level.org.springframework.web.servlet=debug
 
 # ???? ?? ??? ???? ???? ??? ????
 spring.thymeleaf.cache=false
+spring.thymeleaf3.decoupled-logic=true
+
