JPA Repository 스터디
JPA Repository 스터디

--- a/getInLine/src/main/resources/application.properties
+++ b/getInLine/src/main/resources/application.properties
@@ -7,10 +7,23 @@ logging.level.com.example.getinline=debug
 
 
 
-#api ?? ??? ??? ???? ??? ??
+#api
 logging.level.org.springframework.web.servlet=debug
 
-# ???? ?? ??? ???? ???? ??? ????
+spring.data.rest.base-path=/api
+
+# Logging
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
+
+
+# View
 spring.thymeleaf.cache=false
 spring.thymeleaf3.decoupled-logic=true
+
+# Database
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
 
